Can not select object on backface by clicking when Matcap is on #39101

Closed
opened 2014-03-10 23:59:30 +01:00 by Jun T · 7 comments

System Information
Arch Linux (x86-64)
nVidia Geforce GTX 670

Blender Version
Broken: 2.70 25ad7b4

Short description of error
In Object mode, When Matcap is On, Right clicking on backfaces is not work.

Exact steps for others to reproduce the error
Open notselectable.blend. right click the Plane.

**System Information** Arch Linux (x86-64) nVidia Geforce GTX 670 **Blender Version** Broken: 2.70 25ad7b4 **Short description of error** In Object mode, When Matcap is On, Right clicking on backfaces is not work. **Exact steps for others to reproduce the error** Open [notselectable.blend](https://archive.blender.org/developer/F80593/notselectable.blend). right click the Plane.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @junt

Added subscriber: @junt
Sergey Sharybin self-assigned this 2014-03-11 07:09:25 +01:00

Could be so matcaps are somehow enabled in selection picking or so. Will have a look.

Could be so matcaps are somehow enabled in selection picking or so. Will have a look.

This issue was referenced by blender/blender-addons-contrib@12c56d8c1f

This issue was referenced by blender/blender-addons-contrib@12c56d8c1f7318ddbd9782f25b871d4b09bad258

This issue was referenced by 12c56d8c1f

This issue was referenced by 12c56d8c1f7318ddbd9782f25b871d4b09bad258

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 12c56d8c1f.

Closed by commit 12c56d8c1f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39101
No description provided.