Fix T39101: Can not select object on backface by clicking when Matcap is on